syntax = "proto3";
package training;
option go_package = "./;pb";

import "customer.proto";
import "google/protobuf/timestamp.proto";

service AccountServiceRPC {
    rpc GetAccountByID(GetAccountByIdRequest) returns(Account);
    rpc GetAccountByEmail(GetAccountByEmailRequest) returns(Account);
    rpc CreateAccount(CreateAccountRequest) returns (Account);
    rpc UpdateAccount(UpdateAccountRequest) returns (Account);
    rpc UpdateAccountStatus(UpdateAccountStatusRequest) returns (Account);
    rpc DeleteAccount(DeleteAccountRequest) returns (DeleteAccountResponse);
    rpc AccountResetPassword(AccountResetPasswordRequest) returns (AccountResetPasswordResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
}

message Account {
    string id = 1;
    string email = 2;
    string password = 3;
    enum Role{
        Administrator = 0;
        Subscriber = 1;
        Customer = 2;
    };
    Role role = 4;
    enum AccountStatus{
        Inactive = 0;
        Active = 1;
    };
    AccountStatus status = 5;
    Customer acc_owner = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}

message GetAccountByIdRequest {
    string id = 1;
}

message GetAccountByEmailRequest {
    string email = 1;
}

message CreateAccountRequest {
    string email = 1;
    string password = 2;
    enum Role{
        Administrator = 0;
        Subscriber = 1;
        Customer = 2;
    };
    Role role = 3;
    string acc_owner = 4;
}

message UpdateAccountRequest {
    string id = 1;
    enum Role{
        Administrator = 0;
        Subscriber = 1;
        Customer = 2;
    };
    Role role = 2;
}

message UpdateAccountStatusRequest {
    string id = 1;
    enum AccountStatus{
        Inactive = 0;
        Active = 1;
    };
    AccountStatus status = 2;
}


message DeleteAccountRequest {
    string id = 1;
}

message DeleteAccountResponse {
    bool is_deleted = 1;
}

message AccountResetPasswordRequest {
    string email = 1;
    string current_password = 2;
    string new_password = 3;
}

message AccountResetPasswordResponse {
    string is_update = 1;
}



message LoginRequest{
    string email = 1;
    string password = 2;
}

message LoginResponse{
    string token = 1;
    bool status = 2;
}